修复子查询条件解析及联表查询多项问题
- 修复criteriaLimitByEntity支持Lambda生成的列名格式匹配
- 修复子查询hasCondition判断遗漏params和relations来源
- 修复on()别名时序问题，改为SQL生成时通过parentAlias逐级传递
- 修复ON子句逻辑删除条件拼接产生"ON AND"语法错误
- 修复ON条件为空时生成"ON WHERE"语法错误，兜底1=1
- 修复join表逻辑删除在ON和WHERE中重复判断
- 修复SELECT *在JOIN查询中同名列覆盖，改为alias.col AS col
- 修复buildSelectColumns未处理excludes排除字段
- 修复criterias方法未读取relation字段导致or()连接符失效
- 用基于实体元数据的addColumnAlias替换JSQLParser别名替换
- CommonMapper联表方法改用T类型确保MyBatis正确映射
- 新增queryJoinMaps和listJoin支持复合对象查询

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>